03/02/23
    Botón para destruir torre (DestroyButton) añadido! Devuelve la mitad del coste original de la torre y despeja el fundation para poder construir una nueva torre.
    Añadidos ficheros de localización de idiomas. Se va a usar la clase de libGDX I18NBundle en vez del xml de string de android para que sea multiplataforma.
06/02/23
    Sticky tower ahora ralentiza a los enemigos, que cambian de color cuando sufren sus efectos.
    Rebalance de stats. Ganar no resulta complicado, pero sacar una puntuación perfecta tiene más truco.
    Cambios en la gestión de inputs de GameUi para hacer las interacciones más fluidas.
07/02/23
    Ahora hay una pantalla de "ready" para que el jugador pueda prepararse y otras dos de game over y de victoria.
    Para mejorar la usabilidad, los botones de construir torre ahora indican el precio de la misma. En amarillo si se tiene suficiente oro y en rojo si no.
    Mejoras generales de claridad y simplicidad de código. Le hacía falta.
08/02/23
    Mejoras generales de la UI, ahora hay iconos animados para el oro y las vidas gracias a la clase SimpleIcon.
09/02/23
    Ahora las fundation reproducen una pequeña animación al seleccionarse para que sea más claro cual es la que ha pulsado el jugador.
    ¡Nueva habilidad! Al pulsar el botón Rage (o agitar el movil), si se tiene suficiente oro, las torres atacarán mucho más rapido durante unos segundos.
13/02/23
    Se descarta la mecánica del Loot. Rage es más interesante y más intuitivo, y requiere que el usuario maree menos el teléfono agitandolo.
    Se borran las clases y menciones a la mecánica del Loot en el código.
    Mejoras en el código del renderizado, ahora es más eficiente.
    Ahora los enemigos y las torres se 'mueven' (velocidad de la animación) más rápido o lento según el estado (rage/ralentizado).
    Ahora el botón Rage puede activarse agitandose!